--- a/CIAResearch.csproj
+++ b/CIAResearch.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Jobs\AutoRenewBackgroundChecks.cs" />
     <Compile Include="Jobs\UpdateRequests.cs" />
     <Compile Include="Migrations\001_DefinedTypeMigration.cs" />
+    <Compile Include="Migrations\011_RenewJob.cs" />
     <Compile Include="Migrations\010_RenewAttribute.cs" />
     <Compile Include="Migrations\009_AutoRenewalWorkflow.cs" />
     <Compile Include="Migrations\008_EmailBody.cs" />
